<resources>
    <string name="app_name">Safe_App</string>

    <string name="no_fle_is_selected">NO FILE IS SELECTED</string>
    <string name="select_file">SELECT FILE</string>
    <string name="upload_file">UPLOAD FILE</string>
    <string name="fetch_files">FETCH FILES</string>
    <string name="textview">TextView</string>
    <string name="enter_the_name_of_document">NAME OF THE DOCUMENT</string>
</resources>